--- a/managements/templates/managements/rent.html
+++ b/managements/templates/managements/rent.html
@@ -1,49 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rent Test Page</title>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block custom_script %}
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javaScript">
         function eventKeyup(str){
             let str2 = str.slice(3, 10)
-            $("#afterAmt").val(str2);    // jQuery 이용
+            $("#id_student_id").val(str2);    // jQuery 이용
         }
         $(function(){
-            $("button[name=cur_focus]").click(function(){
+            $("input[name=cur_focus]").click(function(){
                 $("input[name=beforeAmt]").focus();
             });
-            $("button[name=cur_focus2]").click(function(){
-                $("input[name=beforeAmt2]").focus();
+            $("input[name=cur_focus2]").click(function(){
+                $("input[name=equip_id]").focus();
             });
         });
     </script>
+{% endblock custom_script %}
 
-</head>
-<body>
-    <form id="rent_form" action="" method="post" onkeydown="return event.key != 'Enter';" enctype="multipart/form-data">
-                                                <!-- 바코드 스캔 시 자동으로 제출되는 것 방지-->
-        {% csrf_token %}
-            {{rent_form.as_p}} <br> 
-            <input type="submit" value="대여"> 
-    </form>
-</body>
-</html>
+{% block custom_css %}
+    <link rel="stylesheet" href="{% static 'managements/rent_page.css' %}">
+{% endblock custom_css %}
 
-
-{% comment %} 
-학번: <input type="text" name="afterAmt" id="afterAmt" value="" />
-        <button type='button' name='cur_focus'>학생증 스캔</button>
-        <input  name="beforeAmt" id="beforeAmt" value="" onkeyup="eventKeyup(this.value)"/><br>
-        이름: <input type="text" name="" id="" placeholder="김눈송"><br>
-        연락처: <input type="text" name="" id="" placeholder="010-1234-1234"><br>
-        물품 번호: <input type="text" name="beforeAmt2" id="beforeAmt2" value="" onkeyup="eventKeyup(this.value)">
-        <button type='button' name='cur_focus2'>기자재 스캔</button> <br>
-        물품 종류: <select name="" id="">
-            <option value="notebook">노트북</option>
-            <option value="">태블릿</option>
-            <option value="">센서</option>
-        </select><br>
-        사진: <br>
-                <input type="submit" value="대여"> {% endcomment %}
+{%block content%}
+<div class="container">
+    <div class="row">
+        <div class="subtitle">
+            <h1>대여 정보 입력</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="rentform ">
+            <form id="rent_form" action="" method="post" onkeydown="return event.key != 'Enter';" enctype="multipart/form-data">
+                                                        <!-- 바코드 스캔 시 자동으로 제출되는 것 방지-->
+                {% csrf_token %}
+                    <input style='opacity:0' name="beforeAmt" id="beforeAmt" value="" onkeyup="eventKeyup(this.value)"/>
+                    <p>학번 : {{rent_student_form.student_id}} 
+                    <input type='button' name='cur_focus' value='학생증 스캔'></p>
+                    <p>이름 : {{rent_student_form.name}}</p>
+                    <p>연락처 : {{rent_student_form.phone_number}}</p>
+                    <p>이메일i : {{rent_student_form.email}}</p>
+                    <p>물품 번호 : {{rent_equipment_form.equip_id}}
+                    <input type="button" name='cur_focus2' value='기자재 스캔'></p>
+                    <p>물품 종류 : {{rent_equipment_form.equip_type}}</p>
+                    {{rent_form.as_p}}
+                    <input type="submit" value="대여"> 
+            </form>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row rent_pledge">
+        <h1>기기 대여 서약서</h1>
+        <p>상기 본인은 숙명여자대학교 IT공학과의 대여 서약서를 충분히 숙지, 이해하였으며 
+        다음의 사항을 준수할 것을 엄숙히 서약합니다.</p>
+    </div>
+    <div class="row">
+        <ol class='check_list'>
+            <li>해당 기기를 대여한 기간 내의 기기책임자는 학생 본인이므로 모든 책임은 본인에게 있음.</li>
+            <li>해당 기기 및 기타 액세서리의 분실, 파손, 도난, 고장 등에 대한 모든 변상은 학생 본인이 부담하며 원상복구하여 반납함.</li>
+            <li>해당 기기를 반납할 시 초기화하여 모든 구성 물품과 함께 반납함.</li>
+            <li>추후 휴학, 자퇴, 전과, 졸업할 경우 반납할 것을 동의함.</li>
+        </ol>
+    </div>
+    <div class="row">
+        <h4>숙명여자대학교 IT공학과의 대여 서약서를 충분히 숙지, 이해하였으며 다음의 사항을 준수할 것을 엄숙히 서약합니다.</h4>
+        <h4 id='red'>※ 위의 준수 사항을 어길 시, 발생하는 개인의 불이익은 IT공학과가 책임지지 않습니다.</h4>
+    </div>
+</div>
+{%endblock%}
